--- a/app/src/main/res/layout/player_view.xml
+++ b/app/src/main/res/layout/player_view.xml
@@ -8,8 +8,8 @@
         android:id="@+id/health_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginStart="@dimen/margin_small"
+        android:layout_marginTop="@dimen/margin_small"
         android:labelFor="@id/health_bar"
         android:text="@string/health_label"
         app:layout_constraintStart_toStartOf="parent"
@@ -20,7 +20,8 @@
         style="@style/Widget.AppCompat.ProgressBar.Horizontal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="@dimen/margin_small"
+        android:layout_marginTop="@dimen/margin_small"
         android:progressTint="#FF0000"
         app:layout_constraintBottom_toBottomOf="@id/health_label"
         app:layout_constraintStart_toEndOf="@id/health_label"
@@ -30,8 +31,8 @@
         android:id="@+id/score_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginTop="@dimen/margin_small"
+        android:layout_marginEnd="@dimen/margin_small"
         android:labelFor="@id/score_text"
         android:text="@string/score_label"
         app:layout_constraintEnd_toStartOf="@id/score_text"
@@ -41,8 +42,8 @@
         android:id="@+id/score_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginTop="@dimen/margin_small"
+        android:layout_marginEnd="@dimen/margin_small"
         android:minWidth="60dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -60,16 +61,16 @@
         android:id="@+id/joystick_view"
         style="@style/joystick"
         android:background="@drawable/joystick_background"
-        android:backgroundTint="#D6D6D6"
+        android:backgroundTint="@color/joystick_background"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent">
 
         <View
             android:id="@+id/joystick_handle"
-            android:layout_width="64dp"
-            android:layout_height="64dp"
+            android:layout_width="@dimen/joystick_handle_size"
+            android:layout_height="@dimen/joystick_handle_size"
             android:background="@drawable/joystick"
-            android:backgroundTint="#787878" />
+            android:backgroundTint="@color/joystick" />
 
     </androidx.appcompat.widget.LinearLayoutCompat>
 
@@ -77,8 +78,8 @@
         android:id="@+id/fire_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="24dp"
-        android:layout_marginBottom="24dp"
+        android:layout_marginEnd="@dimen/margin_medium"
+        android:layout_marginBottom="@dimen/margin_medium"
         android:text="@string/fire_button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
