--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -33,10 +33,11 @@
         app:layout_constraintHeight_percent="0.5"
         app:layout_constraintStart_toStartOf="parent" />
 
-        <androidx.fragment.app.FragmentContainerView
-            android:id="@+id/game_end_fragment_view"
-            android:name="com.example.twoplayergame.GameEndFragment"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/fragment_view"
+        android:name="com.example.twoplayergame.GameIntroFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:layout="@layout/fragment_game_intro" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
