--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -19,7 +19,7 @@
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/play_button"
-        android:layout_width="200dp"
+        android:layout_width="@dimen/menu_button_width"
         android:layout_height="wrap_content"
         android:text="@string/play_button"
         android:textSize="@dimen/button_text_size"
@@ -30,8 +30,9 @@
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/high_scores_button"
-        android:layout_width="200dp"
+        android:layout_width="@dimen/menu_button_width"
         android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/margin_small"
         android:text="@string/high_scores_button"
         android:textSize="@dimen/button_text_size"
         app:layout_constraintBottom_toBottomOf="parent"
