--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,5 @@
     <dimen name="margin_medium">24dp</dimen>
     <dimen name="margin_small">8dp</dimen>
     <dimen name="button_text_size">20sp</dimen>
+    <dimen name="menu_button_width">200dp</dimen>
 </resources>
